Songs dockerized.